<resources>
    <string name="app_name">IRun Tracking</string>
    <string name="started">Started:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="elapsed_time">Duration:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="cell_text">Run at %1$s</string>
    <string name="new_run">GO RUNNING</string>
    <string name="map">Map</string>
    <string name="run_start">Run Start</string>
    <string name="run_started_at_format">Run started at %s</string>
    <string name="run_finish">Run Finish</string>
    <string name="run_finished_at_format">Run finished at %s</string>
    <string name="distance">Distance </string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="facebook_app_id">386941311505760</string>
    <string name="run_list_activity">Run List Activity</string>
    <string name="run_activity">Run Activity</string>
    <string name="run_map_activity">Run Map Activity</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="wrong_password">Password is incorect!</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="wrong_email">E-mail address is not registered!</string>
    <string name="email_exists">E-mail already exists!</string>
    <string name="view_charts">View Charts</string>
    <string name="view_tracks">View Tracks</string>
    <string name="login_activity">Login</string>
    <string name="main_activity">Home</string>
    <string name="kilometers">Kilometers</string>
    <string name="duration">Duration</string>
    <string name="min_km">min/km</string>
    <string name="average_pace">AVG. PACE</string>
    <string name="default_pace">0.00</string>
    <string name="default_distance">00.00</string>
    <string name="default_duration">00:00:00</string>
    <string name="current_pace">CURRENT PACE</string>
    <string name="km">km</string>
    <string name="calories_per_minute">CALORIES PER MINUTE</string>
    <string name="calories">Calories</string>
    <string name="default_calories">0</string>
    <string name="save_activity">Save Activity</string>
    <string name="run_completed">Well done! Run completed!</string>
    <string name="dialog_discard_activity">Are you sure you want to discard the activity?</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="enable_gps">ENABLE GPS</string>
    <string name="activities">Activities</string>
    <string name="record_run">Record Run</string>
    <string name="run_map">Run Map</string>
    <string name="app_name_login">IRun Tracking - Login</string>
    <string name="farthest_distance">Farthest Distance</string>
    <string name="longest_duration">Longest Duration</string>
    <string name="fastest_pace">Fastest Avg. Pace</string>
    <string name="max_calories">Most Calories Burned</string>
    <string name="records">Personal Records</string>
    <string name="view_records">View Personal Records</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="profile_settings">PROFILE SETTINGS</string>
    <string name="full_name">Full Name</string>
    <string name="weight">Weight</string>
    <string name="settings">Settings</string>
    <string name="enter_name">Enter full name</string>
    <string name="enter_weight">Enter weight (kg)</string>
    <string name="enter_email">Enter E-mail</string>
    <string name="wrong_email_format">Email is invalid!</string>
    <string name="wrong_password_format">Password must have at least 6 characters!</string>
    <string name="wrong_weight_format">Weight must be a positive float number!</string>
    <string name="wrong_name_format">Name cannot be empty</string>
    <string name="charts">Charts</string>
    <string name="day">day</string>
    <string name="time">time</string>
    <string name="this_week">This Week</string>
    <string name="running_evolution">Running evolution</string>
    <string name="running">Running</string>
</resources>
