<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        style="@style/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/profile_settings" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/green" />

    <TextView
        style="@style/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name" />

    <EditText
        android:id="@+id/full_name_TextView"
        style="@style/SettingsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="text"
        android:hint="@string/enter_name"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/green" />

    <TextView
        style="@style/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight" />

    <EditText
        android:id="@+id/weight_textView"
        style="@style/SettingsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="number"
        android:hint="@string/enter_weight"/>

    <TextView
        style="@style/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/account_settings" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/green" />

    <TextView
        style="@style/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_textView"
        style="@style/SettingsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/green" />

    <TextView
        android:id="@+id/logout_textView"
        style="@style/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>