<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/duration"
        android:textAllCaps="true"
        style="@style/RunText"
        />

    <TextView
        android:id="@+id/run_duration_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/default_duration"
        style="@style/RunTextExtraLarge"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text_grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/distance"
        android:textAllCaps="true"
        style="@style/RunText"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >
        <TextView
            android:id="@+id/run_distance_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_distance"
            style="@style/RunTextExtraLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/km"
            style="@style/RunTextLarge"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text_grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:id="@+id/run_calories_static_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/calories_per_minute"
        style="@style/RunText"
        />

    <TextView
        android:id="@+id/run_calories_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/default_calories"
        style="@style/RunTextLarge"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text_grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/run_current_pace_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_pace"
                style="@style/RunText"
                />

            <TextView
                android:id="@+id/run_current_pace_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_pace"
                style="@style/RunTextLarge"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_km"
                style="@style/RunText"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_pace"
                style="@style/RunText"
                />

            <TextView
                android:id="@+id/run_pace_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_pace"
                style="@style/RunTextLarge"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_km"
                style="@style/RunText"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/run_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/green"
        android:text="@string/start"
        style="@style/DefaultButtonText" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/run_pause_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:padding="15dp"
            android:background="@color/yellow"
            android:text="@string/pause"
            style="@style/DefaultButtonText"
            android:textColor="@color/text_grey" />

        <Button
            android:id="@+id/run_stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:padding="15dp"
            android:background="@color/green"
            android:text="@string/stop"
            style="@style/DefaultButtonText" />
    </LinearLayout>

    <Button
        android:id="@+id/run_map_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:background="@color/blue"
        android:text="@string/map"
        style="@style/DefaultButtonText" />
</TableLayout>
