<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_shadow"
    android:orientation="vertical">

    <TextView
        android:id="@+id/run_start_date_textView"
        style="@style/RunListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/view_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/blue"
        android:contentDescription="@string/map"
        android:padding="20dp"
        android:src="@drawable/view_map" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TableRow>

            <TextView
                android:id="@+id/distance_textView"
                style="@style/RunListTextGreenLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/duration_textView"
                style="@style/RunListTextGreenLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/min_km_textView"
                style="@style/RunListTextGreenLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/calories_textView"
                style="@style/RunListTextGreenLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/RunListText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kilometers"
                android:textAllCaps="false"/>

            <TextView
                style="@style/RunListText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textAllCaps="false" />

            <TextView
                style="@style/RunListText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min_km" />

            <TextView
                style="@style/RunListText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories"
                android:textAllCaps="false" />
        </TableRow>
    </TableLayout>

</LinearLayout>