<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/run_list_vertical_margin"
    android:paddingRight="@dimen/run_list_vertical_margin"
    android:background="@color/grey">

    <TextView
        style="@style/RecordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/running"/>

    <TableRow
        android:padding="25dp"
        android:background="@drawable/border_shadow"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/RecordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farthest_distance" />

            <TextView
                android:id="@+id/farthest_distance_date_textView"
                style="@style/RecordTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/farthest_distance_textView"
                style="@style/RecordTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/RecordTextColorSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:padding="25dp"
        android:background="@drawable/border_shadow"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/RecordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longest_duration" />


            <TextView
                android:id="@+id/longest_duration_date_textView"
                style="@style/RecordTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/longest_duration_textView"
            style="@style/RecordTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>


    <TableRow
        android:padding="25dp"
        android:background="@drawable/border_shadow"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/RecordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fastest_pace" />

            <TextView
                android:id="@+id/fastest_pace_date_textView"
                style="@style/RecordTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fastest_pace_textView"
                style="@style/RecordTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/RecordTextColorSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_km" />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:padding="25dp"
        android:background="@drawable/border_shadow"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/RecordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_calories" />

            <TextView
                android:id="@+id/max_calories_date_textView"
                style="@style/RecordTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/max_calories_textView"
            style="@style/RecordTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </TableRow>

</TableLayout>
